# AI-Medical-Assistant-Patient-Monitoring-System

./: .env.prod.template  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  _write_files.py  cursor.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  team-assignments-mar23-27.csv
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  celery_worker.py  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  db_schema_compat.py  ensure_demo_doctors.py  extensions.py
backend/app/agents/: __init__.py  base_agent.py  drug_interaction_agent.py  followup_agent.py  guardrails.py  monitoring_agent.py  orchestrator.py  report_reader.py  specialty_agent.py  specialty_config.py  symptom_analyst.py  triage_agent.py  voice_agent.py  voice_symptom_analyst.py
backend/app/api/: __init__.py
backend/app/integrations/: email_client.py  email_templates.py  openai_client.py  s3_client.py
backend/app/middleware/: __init__.py  auth_middleware.py  hipaa_audit.py  rate_limiter.py
backend/app/models/: __init__.py  alert.py  appointment.py  audit_log.py  base.py  care_plan.py  conversation.py  device.py  doctor.py  medication.py  monitoring_threshold.py  notification.py  patient.py  report.py  symptom_session.py  telemedicine.py  user.py  vitals.py  voice_session.py
backend/app/schemas/: appointment_schema.py  auth_schema.py  device_schema.py  (+12 more)
backend/migrations/: alembic.ini  env.py
backend/scripts/: seed_demo_data.py  seed_extra_data.py  seed_production.py  seed_render.py
backend/tests/: conftest.py
(+221 files in other folders)
